added user comments section

--- a/app/views/contract_revisions/_contract_revision.html.erb
+++ b/app/views/contract_revisions/_contract_revision.html.erb
@@ -15,7 +15,7 @@
   </div>
 </div>
 <div class="form-group row">
-  <%= f.label :rating_1, "The Right to Sue", :class => "col-md-4 col-sm-5 col-form-label" %>
+  <%= f.label :rating_1, "The Right to Privacy", :class => "col-md-4 col-sm-5 col-form-label" %>
   <div class="col-2">
     <%= f.select(:rating_1, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
   </div>
@@ -24,7 +24,7 @@
   </div>
 </div>
 <div class="form-group row">
-  <%= f.label :rating_2, "The Right to Low-Cost Arbitration", :class => "col-4 col-form-label" %>
+  <%= f.label :rating_2, "The Right to Equal, Fair, & Reasonable Expression", :class => "col-4 col-form-label" %>
   <div class="col-2">
     <%= f.select(:rating_2, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
   </div>
@@ -33,7 +33,7 @@
   </div>
 </div>
 <div class="form-group row">
-  <%= f.label :rating_3, "The Right to a Class Action", :class => "col-4 col-form-label" %>
+  <%= f.label :rating_3, "The Right to Control My Intellectual Property", :class => "col-4 col-form-label" %>
   <div class="col-2">
     <%= f.select(:rating_3, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
   </div>
@@ -42,7 +42,7 @@
   </div>
 </div>
 <div class="form-group row">
-  <%= f.label :rating_4, "The Right to Due Process", :class => "col-4 col-form-label" %>
+  <%= f.label :rating_4, "The Right to Sue", :class => "col-4 col-form-label" %>
   <div class="col-2">
     <%= f.select(:rating_4, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
   </div>
@@ -51,7 +51,7 @@
   </div>
 </div>
 <div class="form-group row">
-  <%= f.label :rating_5, "The Right to No Hidden Terms or Fees", :class => "col-4 col-form-label" %>
+  <%= f.label :rating_5, "The Right to Low-Cost Arbitration", :class => "col-4 col-form-label" %>
   <div class="col-2">
     <%= f.select(:rating_5, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
   </div>
@@ -60,7 +60,7 @@
   </div>
 </div>
 <div class="form-group row">
-  <%= f.label :rating_6, "The Right to Defend Myself & Be Heard", :class => "col-4 col-form-label" %>
+  <%= f.label :rating_6, "The Right to Join a Class Action", :class => "col-4 col-form-label" %>
   <div class="col-2">
     <%= f.select(:rating_6, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
   </div>
@@ -69,7 +69,7 @@
   </div>
 </div>
 <div class="form-group row">
-  <%= f.label :rating_7, "The Right to Control My Intellectual Property", :class => "col-4 col-form-label" %>
+  <%= f.label :rating_7, "The Right to No Hidden Terms or Fees", :class => "col-4 col-form-label" %>
   <div class="col-2">
     <%= f.select(:rating_7, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
   </div>
@@ -78,7 +78,7 @@
   </div>
 </div>
 <div class="form-group row">
-  <%= f.label :rating_8, "The Right to Freedom of Expression", :class => "col-4 col-form-label" %>
+  <%= f.label :rating_8, "The Right to Fair Process & To Be Heard", :class => "col-4 col-form-label" %>
   <div class="col-2">
     <%= f.select(:rating_8, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
   </div>
@@ -87,7 +87,7 @@
   </div>
 </div>
 <div class="form-group row">
-  <%= f.label :rating_9, "The Right to Privacy", :class => "col-4 col-form-label" %>
+  <%= f.label :rating_9, "The Right to Appeal & The Right to Return", :class => "col-4 col-form-label" %>
   <div class="col-2">
     <%= f.select(:rating_9, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
   </div>
