--- a/app/views/contract_revisions/_form.html.erb
+++ b/app/views/contract_revisions/_form.html.erb
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_1, "The Right to Sue", :class => "col-md-4 col-sm-5 col-form-label" %>
+      <%= f.label :rating_1, "The Right to Privacy", :class => "col-md-4 col-sm-5 col-form-label" %>
       <div class="col-2">
         <%= f.select(:rating_1, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
       </div>
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_2, "The Right to Low-Cost Arbitration", :class => "col-4 col-form-label" %>
+      <%= f.label :rating_2, "The Right to Equal, Fair, & Reasonable Expression", :class => "col-4 col-form-label" %>
       <div class="col-2">
         <%= f.select(:rating_2, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
       </div>
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_3, "The Right to a Class Action", :class => "col-4 col-form-label" %>
+      <%= f.label :rating_3, "The Right to Control My Intellectual Property", :class => "col-4 col-form-label" %>
       <div class="col-2">
         <%= f.select(:rating_3, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
       </div>
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_4, "The Right to Due Process", :class => "col-4 col-form-label" %>
+      <%= f.label :rating_4, "The Right to Sue", :class => "col-4 col-form-label" %>
       <div class="col-2">
         <%= f.select(:rating_4, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
       </div>
@@ -54,7 +54,7 @@
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_5, "The Right to No Hidden Terms or Fees", :class => "col-4 col-form-label" %>
+      <%= f.label :rating_5, "The Right to Low-Cost Arbitration", :class => "col-4 col-form-label" %>
       <div class="col-2">
         <%= f.select(:rating_5, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
       </div>
@@ -63,7 +63,7 @@
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_6, "The Right to Defend Myself & Be Heard", :class => "col-4 col-form-label" %>
+      <%= f.label :rating_6, "The Right to Join a Class Action", :class => "col-4 col-form-label" %>
       <div class="col-2">
         <%= f.select(:rating_6, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
       </div>
@@ -72,7 +72,7 @@
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_7, "The Right to Control My Intellectual Property", :class => "col-4 col-form-label" %>
+      <%= f.label :rating_7, "The Right to No Hidden Terms or Fees", :class => "col-4 col-form-label" %>
       <div class="col-2">
         <%= f.select(:rating_7, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
       </div>
@@ -81,7 +81,7 @@
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_8, "The Right to Freedom of Expression", :class => "col-4 col-form-label" %>
+      <%= f.label :rating_8, "The Right to Fair Process & To Be Heard", :class => "col-4 col-form-label" %>
       <div class="col-2">
         <%= f.select(:rating_8, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
       </div>
@@ -90,7 +90,7 @@
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_9, "The Right to Privacy", :class => "col-4 col-form-label" %>
+      <%= f.label :rating_9, "The Right to Appeal & The Right to Return", :class => "col-4 col-form-label" %>
       <div class="col-2">
         <%= f.select(:rating_9, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
       </div>
