--- a/app/views/contract_revisions/_contract_user_rating.html.erb
+++ b/app/views/contract_revisions/_contract_user_rating.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@contract_revision.contract_user_ratings.build(:contract_revision_id => @contract_revision.id, :user_id => current_user.id), html: { class: 'edit-rating' }) do |f| %>
+<%= form_for(@contract_revision.contract_user_ratings.build(:contract_revision_id => @contract_revision.id, :user_id => current_user.id), html: { :id => "new_user_rating", class: 'edit-rating' }) do |f| %>
   <fieldset>
     <div class="form-group row">
       <%= f.label :rating, "User Rating", :class => "col-3 col-form-label" %>
@@ -10,7 +10,17 @@
         <% end %>
       </div>
       <div class="col-2 editable">
-        <%= f.select :rating, ContractUserRating::USER_RATINGS, {} ,{class: 'form-control'} %>
+        <%= f.select(:rating,
+        ContractUserRating::USER_RATINGS.collect { |c| [c, ContractUserRating::USER_RATINGS.index(c)]}, {} ,{class: 'form-control'}) %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :comment, :class => "col-3 col-form-label" %>
+      <div class="col-8 read-only">
+        <%= @contract_user_rating.comment if !@contract_user_rating.nil? %>
+      </div>
+      <div class="col-8 editable">
+        <%= f.text_area :comment, :class => "form-control", :placeholder => "Enter comment", :row => 3 %>
       </div>
     </div>
     <div><%= f.hidden_field :contract_revision_id %></div>
