Made html, text, and code changes

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container pt-5">
-  <h2>Alphabetical List of Contracts By Company Name</h2>
+  <h2>Alphabetical List of Websites/Apps By Company Name</h2>
+  <p>Note: This list shows both reviewed contracts and those waiting to be reviewed.</p>
   <br />
   <div class="row">
     <div class="col-md-7">
