--- a/app/views/contract_revisions/_contract_review.html.erb
+++ b/app/views/contract_revisions/_contract_review.html.erb
@@ -1,4 +1,4 @@
-<p class="h4">Reviewed by the following attorneys</p>
+<p class="h4">Reviewed by the following attorneys and/or law students:</p>
 <%= render 'shared/fine_print' %>
 <table class="table">
   <thead>
