--- a/app/views/websites/about.html.erb
+++ b/app/views/websites/about.html.erb
@@ -18,4 +18,8 @@
 
   <p>NOTE: We are not a for-profit project of Break Diving, Inc., a 501(c)(3) tax-exempt corporation.  All donations to Break Diving, Inc. will help to further the reach of our website, help to bring on additional coders and attorneys, and ensure that the ideals of transparency espoused on this website and in our bill of rights are spread throughout the world.</p> 
 
+  <h3>Contact</h3>
+
+  <p>Got something to say?  If you would like to get in touch, have found coding bugs, would like to make a suggestion for improvement, or are a company with a comment or concern, please send an email to info @ break diving . org.  Someone from our staff will get back to you as soon as possible.</p>
+
 </div>
