--- a/app/views/websites/bill_of_rights.html.erb
+++ b/app/views/websites/bill_of_rights.html.erb
@@ -8,13 +8,13 @@
 
   <p>Online users are the lifeblood of online companies.  Without the consumer, there would be no smartphones, no social media, no games, and no software.  Without the consumer, the company dies.</p>
 
-  <p>Given this self-evident truth, it is reasonable to expect that these companies (that survive because of consumers) will be honest, fair, transparent, reasonable, and LOVING of the user base that they (and others like them) collectively provide.</p>
+  <p>Given this self-evident truth, it is reasonable to expect that these companies (that survive because of consumers) will be honest, fair, transparent, reasonable, and LOVING of the user base that they (the users) collectively provide to the companies.</p>
 
   <p>Therefore, this Online Bill of Rights was created to protect users such as me, and… such as you.  TOSfairness expects that those companies with whom we users choose to do business will adhere to the standard set forth below.  Those websites, apps, and companies that do will be rewarded.  Those that do not... will have their disregard for user rights publicly scrutinized and disclosed here on and through the Terms of Service Fairness Project.</p>
 
-  <p>Each online TOS submitted is rated from 0 - 100, with 0 being egregiously unfair, and 100 being majestically fair.  It is our hope that this bill of rights will inspire you—the company heads—to take a good hard look at your terms of service using our standards, and... revise your agreements accordingly.</p>
+  <p>Each online TOS submitted is rated from 0 - 100, with 0 being egregiously unfair, and 100 being majestically fair.  It is our hope that this bill of rights will inspire you--the company heads--to take a good hard look at your terms of service agreements using our standards, and... revise your agreements accordingly.</p>
 
-  <p>I, the user, do hereby declare that I and other users like me shall have:</p>
+  <p>Therefore, I, the user, do hereby declare that I and other users like me shall have:</p>
 
   <ol>
     <!-- NUMBER ONE -->
