--- a/app/views/websites/team.html.erb
+++ b/app/views/websites/team.html.erb
@@ -22,8 +22,17 @@
           <li><b>Monroe Mann</b> - Project Manager &amp; Junior Developer (<a href="https://github.com/monroemann" target="_blank">Monroe's Github</a>)</li>
           <li><b>Chris Van</b> - Junior Developer (<a href="https://github.com/dynnog" target="_blank">Chris' Github</a>)</li>
           <li><b>Robert Chen</b> - Junior HTML/CSS Coder (<a href="https://github.com/gamester543" target="_blank">Robert's Github</a>)</li>
+          <li>Your name here?  If you're a coder/developer, <a href="volunteer.html">volunteer with us</a>.  We need you.</li>
           
         </ul>
     </div>
+  </div>
+
+  <div class="col-xs-12">
+    <h2>The Reviewers</h2>
+    <ul>
+      <li><b>Attorney Monroe Mann</b>, PhD, Esq, MBA, LLM, ME - Practising Attorney in New York</li>
+      <li>Your name here? If you're an attorney or law student, <a href="volunteer.html">volunteer with us</a>.  We need you.</li>
+    </ul>
   </div>
 </div>
