--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="/rating_system">The Rating System</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <%= link_to "The Ratings", companies_path, :class => "nav-link" %>
               </li>
               <li class="nav-item">
