--- a/app/views/shared/_large_fine_print.html.erb
+++ b/app/views/shared/_large_fine_print.html.erb
@@ -1,9 +1,4 @@
 <br /><br />
 <p>The reviews on this website are merely a public service. No reviews on this website
-are to be considered legal advice. Each review is merely one potential analysis. Remember that each
-'Click to Agree' agreement is (in most jurisdictions) deemed to be a binding contract between you
-and company. Therefore, before making any final decision ono whether to sign any online agreement,
-please be sure to read the contract in full, and to consult a licensed attorney in your country or state.
-Use of this website does not in any way create any lawyer-client relationship. Click here to read
-our full terms of service.</p>
+are to be considered legal advice. Each review is merely one potential analysis. Remember that each 'Click to Agree' agreement is (in most jurisdictions) deemed to be a binding contract between you and the company. Therefore, before making any final decision on whether to sign any online agreement, if you are uncertain, please be sure to read the contract in full, and if you are still confused, consult a licensed attorney in your country or state.  Use of this website does not in any way create any lawyer-client relationship anywhere in the world. Click here to read our full <a href="/terms.html">terms of service and privacy policy</a>..</p>
 <br />
