--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -4,10 +4,11 @@
     <div class="jumbotron">
       <div class="container">
         <h1 class="display-5">The Terms of Service Fairness Project</h1>
+        <h5>This Website's TOS Fairness Rating Score: __ / 100</h5>
         <p>Most online user agreements are stacked in favor of the corporation, and not in favor of the individual user.  We aim to change that, and keep it that way.  TOSfairness is a collective of volunteer attorneys and netizens focused on corporate transparency in murky 'click' agreements on the web, on phones, on games, and online.</p>
         <p>No one (and we mean NO ONE) reads every word of every agreement before joining a new website or agreeing to new terms of service, whether on a computer, or on your phone.  Well, until now.  Now, we read and rate as many of them for you as we can, in order of demand, so you can feel safer signing them.  Awesome, right?  You're welcome.</p>
         <p>Brought to you by Break Diving, Inc. a 501(c)(3) not-for-profit with one primary mission: helping individuals succeed in life.  It follows that in order for people to succeed in life, they should know exactly what they are actually signing.  Right?  Let's get started!</p>
-        <p class="text-right"><a class="btn btn-primary btn-sm" role="button" href="#">Learn more about us »</a></p>
+        <p class="text-right"><a class="btn btn-primary btn-sm" role="button" href="about.html">Learn more about us »</a></p>
 
         <div class="row">
           <div class="col-md-10">
@@ -17,7 +18,7 @@
                     <%= autocomplete_field_tag 'search', '', autocomplete_company_company_name_companies_path, :class => 'form-control mr-sm-2', placeholder: "Enter Company Name or URL"  %>
                   </div>
                   <div class="col-md-3">
-                    <%= submit_tag 'Search Company', :class => 'btn btn-outline-info my-2 my-sm-0'%>
+                    <%= submit_tag 'Search Company', :class => 'btn btn-primary my-2 my-sm-0'%>
                   </div>
                 </div>
             <% end %>
@@ -26,7 +27,7 @@
         <br />
         <div class="row">
           <div class="col-md-10">
-            <%= link_to "New TOS Review Request", new_company_path, :class => 'btn btn-primary my-2 my-sm-0' %>
+            <%= link_to "Don't See What You Want?  Request New Review.", new_company_path, :class => 'btn btn-outline-info my-2 my-sm-0' %>
           </div>
         </div>
       </div>
@@ -51,17 +52,17 @@
           <h2>Our Online User Bill of Rights</h2>
           <p>It's time we banded together as users and consumers and demanded to be treated better.  This is your online user bill of rights, brought to you by the volunteer attorneys at the TOS Fairness Project.</p>
           <ol>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ol>
+            <li>The Right to Privacy</li>
+            <li>The Right to Equal, Fair, &amp; Reasonable Expression</li>
+            <li>The Right to Control My Intellectual Property</li>
+            <li>The Right to Sue</li>
+            <li>The Right to Low-Cost Arbitration</li>
+            <li>The Right to Join a Class Action</li>
+            <li>The Right to No Hidden Terms or Fees</li>
+            <li>The Right to Fair Process &amp; To Be Heard</li>
+            <li>The Right To Appeal &amp; The Right to Return</li>
+            <li>The Right to Reasonable Terms</li>
+          </ol>
           <p><a class="btn btn-secondary" role="button" href="/bill_of_rights.html">View details »</a></p>
        </div>
         <div class="col-md-4">
