--- a/app/views/websites/rating_system.html.erb
+++ b/app/views/websites/rating_system.html.erb
@@ -3,7 +3,7 @@
 
   <h1>Our Rating System</h1>
 
-  <p>Each contract terms of service will have a rating, from 0 - 100, in order to help preserve each users bill of rights, and to provide each user with a clear idea of what they are signing.</p>
+  <p>In order to help preserve each users bill of rights, and in order to provide each user with a clear idea of what he or she is signing, each contract terms of service reviewed on this site is given a rating, from 0 - 100, with 100 being the most fair.</p>
 
   <p>Each agreement is first rated on a 0 - 50 scale, using the following criteria from our online user <a href="/bill_of_rights.html">bill of rights</a>.
 
@@ -34,19 +34,21 @@
 
   <ul>
     <li><b>Historical Fairness</b> - Up to 10 Points</li>
-      <p>Have previous iterations of this Terms of Service been fair over the last 5 years?</p>
+      <p>Have previous iterations of this Terms of Service been fair over the last 5 years?  If there have been no previous iterations, this score is based on the rating of the first version reviewed.  Otherwise, an average is used.</p>
     <li><b>Historical User Ratings</b> - Up to 10 Points</li>
-      <p>Have users had good experiences with this product or service's terms of service over the last 5 years?</p>
+      <p>Have users had good experiences with this product's or service's terms of service over the last 5 years? This score starts at 10, and thereafter, an average of all user reviews is used.</p>
     <li><b>Historical Lack of Lawsuits or Arbitrations</b> - Up to 10 Points</li>
-      <p>Has the company had very few consumer initiated lawsuits or arbitrations over the last 5 years arising out of this or prior iterations of this terms of service?  The fewer legal issues that arrive in courts or in arbitration halls, the higher this number will be.</p>
+      <p>Has the company had very few consumer initiated lawsuits or arbitrations over the last 5 years arising out of this or prior iterations of this terms of service?  The fewer legal issues that arrive in courts or in arbitration halls, the higher this number will be.  This score starts at 10, and drops as each court or arbitration battle is documented.</p>
     <li><b>Public Placement of TOS Rating Score</b> - Up to 20 points</li>
-      <p>Does the company place its TOS Rating Score prominently and publicly on the actual Terms of Service signature page, directly next to the 'clickbox', clickable to its terms of service rating page for that terms of service?  It should read: "TOS Fairness Rating: #/100.  Read more." (with # replaced by the score and 'Read more' linking to our website's rating page for that company).  A company's initial score will automatically include the 20 points, and if the company does not add the score within 30 days of being reviewed, and/or fails to let us know that the score has been properly added, the 20 points will be removed from the score and updated on our website accordingly.</p>
+      <p>Does the company place its TOS Rating Score prominently and publicly on the homepage itself, on the actual Terms of Service signature page, and ideally, directly next to the 'clickbox'?  Is each listing clickable to that company's terms of service rating page for that terms of service on our website?  It should read, at minimum: "TOS Fairness Rating: #/100" (with # replaced by the score and 'Read more' linking to our website's rating page for that company).  For now, a company's initial score will automatically include the 20 points, and if the company does not add the score within 30 days of being reviewed, and/or fails to let us know that the score has been properly added within 30 days, the points will be removed from the score and updated on our website accordingly.</p>
   </ul>
 
-  <p>Together, this all comes to 100 points.</p>
+  <p>Together, this all comes to 100 points.  The higher the score, the more fair the agreement.  In general, a score of 90 or above is excellent; 70 or above is considered fair; and if the score is below 70, you should be very cautious before using that service or website.  Anything below 25 should probably be avoided at all costs, or USE AT YOUR OWN RISK BECAUSE YOU HAVE GIVEN UP NEARLY ALL OF YOUR RIGHTS IF YOU USE THAT SERVICE!</p>
 
   <p>Companies that follow and adhere to the bill of rights, and treat customers fairly and with respect, will come closest to earning the coveted, but rarely earned, 100.</p>
 
-  <p>Each day, the top ten fair online contracts and top ten unfair online contracts will be publicly displayed on the TOSFairness.org homepage--as both a badge of honor to those who are at the top, and an embarrassing outing of those companies who disrespect their customers.</p>
+  <p>Each day, the top ten fair online contracts and top ten unfair online contracts will be publicly displayed on the TOSFairness.org homepage--as both a badge of honor to those who are at the top, and an embarrassing outing of those companies who disrespect their customers who are rated at the bottom.</p>
+
+  <p>As a courtesy, TOSfairness will make a reasonable effort to contact any company that is reviewed on the website (via email, if an email address is easily listed on the company website) to inform the company that their website and/or app has been reviewed on TOSfairness.  We do this in order to give that company an opportunity to review its rating, and should management so desire, to use our bill of rights and suggestions to improve the score.</p>
 
 </div>
