Adjusted more pages

--- a/app/views/contract_revisions/show.html.erb
+++ b/app/views/contract_revisions/show.html.erb
@@ -9,7 +9,7 @@
         <a class="nav-link" data-toggle="tab" href="#review" role="tab">Reviewed by</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#rating">User Rating</a>
+        <a class="nav-link" data-toggle="tab" href="#rating">User Ratings</a>
       </li>
     </ul>
     <br />
