Adjusted devise to add TOS rating score

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container pt-5">
-  <h2>Alphabetical List of Websites/Apps By Company Name</h2>
-  <p>Note: This list shows both reviewed contracts and those waiting to be reviewed.</p>
+  <h2>Alphabetical List of Entries by Company Name</h2>
+  <p>Note: This list shows companies with both reviewed contracts and also those waiting to be reviewed.  Click 'view' to see a list of contracts associated with that company.  If you don't find what you are looking for, use the form at the bottom to add that company to our waiting list.</p>
   <br />
   <div class="row">
     <div class="col-md-7">
