--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,12 +5,11 @@
       </div>
       <div class="col-md-7">
         <ul class="nav justify-content-end">
-          <li class="nav-item"><a class="nav-link" href="#">TOS Fairness</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Privacy</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Terms</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Legal &amp; Tax Info</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">FAQ</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contact us</a></li>
+          <li class="nav-item"><a class="nav-link" href="/index.html">TOS Fairness</a></li>
+          <li class="nav-item"><a class="nav-link" href="/terms.html">Terms &amp; Privacy</a></li>
+          <li class="nav-item"><a class="nav-link" href="/tax.html">Tax Info</a></li>
+          <!-- <li class="nav-item"><a class="nav-link" href="#">FAQ</a></li> -->
+          <li class="nav-item"><a class="nav-link" href="/about.html">Contact us</a></li>
           <li class="nav-item">
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
               <input type="hidden" name="cmd" value="_s-xclick">
