--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
                 <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
+                <%= link_to "All Ratings", companies_path, :class => "nav-link" %>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="/team">The Team</a>
               </li>
               <li class="nav-item">
@@ -41,10 +44,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="/rating_system">The Rating System</a>
               </li>
-              <li class="nav-item active">
-                <%= link_to "The Ratings", companies_path, :class => "nav-link" %>
-              </li>
-              <li class="nav-item">
               <li class="nav-item">
                 <a class="nav-link" href="/break_diving">Break Diving</a>
               </li>
