Turned the 10 back to 0

--- a/app/views/websites/about.html.erb
+++ b/app/views/websites/about.html.erb
@@ -16,7 +16,11 @@
 
   <p>Thanks for visiting us, and please, spread the word.  The more people who know to come to TOSFairness prior to clicking "I agree", the better off the world will be!</p>
 
-  <p>NOTE: We are not a for-profit project of Break Diving, Inc., a 501(c)(3) tax-exempt corporation.  All donations to Break Diving, Inc. will help to further the reach of our website, help to bring on additional coders and attorneys, and ensure that the ideals of transparency espoused on this website and in our bill of rights are spread throughout the world.</p> 
+  <h3>Becoming a User</h3>
+
+  <p>You can use the service for free without signing up!  If you do sign up to use TOS Fairness as a user, you will able to rate the agreements and companies yourself, and your score will be averaged into the historical user ratings.</p>
+
+  <p>NOTE: We are not a for-profit project of Break Diving, Inc., a 501(c)(3) tax-exempt corporation.  <a href="http://www.breakdiving.org/contribute">All donations to Break Diving</a>, Inc. will help to further the reach of our website, help to bring on additional coders and attorneys, and ensure that the ideals of transparency espoused on this website and in our bill of rights are spread throughout the world.</p> 
 
   <h3>Contact</h3>
 
