--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,8 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
-    <p class="text-center"><a href="#">TOS Fairness Score: 100/100</a></p>
+    <p class="text-center">TOS Fairness Score: 100/100<br>
+    <a href="#" target="_blank">Read details in new window.</a></p>
 
     <div class="form-group">
       <%= f.label :first_name %><br />
