Added https information disclaimer

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,8 @@
     <p class="text-center">TOS Fairness Score: 100/100<br>
     <a href="#" target="_blank">Read details in new window.</a></p>
 
+    <p>If your browser says this connection is not secure, be sure that you are using https, and not http, when launching the site.</p>
+
     <div class="form-group">
       <%= f.label :first_name %><br />
       <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", :class => "form-control"  %>
