Quick hack to improve front page mobile views

--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -27,7 +27,10 @@
         <br />
         <div class="row">
           <div class="col-md-10">
-            <%= link_to "Don't See What You Want?  Request New Review.", new_company_path, :class => 'btn btn-outline-info my-2 my-sm-0' %>
+            <small>Don't see what you want?</small>
+            <div>
+              <%= link_to "Request New Review.", new_company_path, :class => 'btn btn-outline-info my-2 my-sm-0' %>
+            </div>
           </div>
         </div>
       </div>
