--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -29,7 +29,7 @@
           <div class="col-md-10">
             <small>Don't see what you want?</small>
             <div>
-              <%= link_to "Request New Review.", new_company_path, :class => 'btn btn-outline-info my-2 my-sm-0' %>
+              <%= link_to "Request New Review", new_company_path, :class => 'btn btn-outline-info my-2 my-sm-0' %>
             </div>
           </div>
         </div>
