Seperated tables to improve resizing

--- a/app/views/contract_revisions/show.html.erb
+++ b/app/views/contract_revisions/show.html.erb
@@ -51,6 +51,8 @@
                 </td>
               <% end %>
             </tr>
+          </tbody>
+          <tbody>
             <tr>
               <th scope="col">The Right to Equal, Fair, & Reasonable Expression</th>
               <td><%= @contract_revision.rating_2 %></td>
