--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -18,7 +18,7 @@
                     <%= autocomplete_field_tag 'search', '', autocomplete_company_company_name_companies_path, :class => 'form-control mr-sm-2', placeholder: "Enter Company Name or URL"  %>
                   </div>
                   <div class="col-md-3">
-                    <%= submit_tag 'Search Company', :class => 'btn btn-primary my-2 my-sm-0'%>
+                    <%= submit_tag 'Search Company', :class => 'btn btn-primary my-2 my-sm-0 btn-search'%>
                   </div>
                 </div>
             <% end %>
@@ -27,7 +27,7 @@
         <br />
         <div class="row">
           <div class="col-md-10">
-            <%= link_to "Don't See What You Want? <span data-text=\"before this\">Request New Review.</span>".html_safe, new_company_path, :class => 'btn btn-outline-info my-2 my-sm-0 request' %>
+            <%= link_to "Don't See What You Want? <span data-text=\n\>Request New Review.</span>".html_safe, new_company_path, :class => 'btn btn-outline-info my-2 my-sm-0 request' %>
           </div>
         </div>
       </div>
