--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -3,9 +3,9 @@
   <p>Note: This list shows companies with both reviewed contracts and also those waiting to be reviewed.  Click 'view' to see a list of contracts associated with that company.  If you don't find what you are looking for, use the form at the bottom to add that company to our waiting list.</p>
   <br />
   <div class="row">
-    <div class="col-md-7">
+    <div class="col-md-8">
       <% if !@companies.nil? %>
-        <table class="table">
+        <table class="table company-list">
           <thead>
             <tr>
               <th scope="col">Company Name</th>
