--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -27,7 +27,7 @@
         <br />
         <div class="row">
           <div class="col-md-10">
-            <%= link_to "Don't See What You Want? <span data-text=\"before this\">Request New Review.</span>".html_safe, new_company_path, :class => 'btn btn-outline-info my-2 my-sm-0 request' %>
+            <%= link_to "Don't See What You Want? <span>Request New Review.</span>".html_safe, new_company_path, :class => 'btn btn-outline-info my-2 my-sm-0 request' %>
           </div>
         </div>
       </div>
