--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -68,12 +68,28 @@
               <th scope="col">Application</th>
               <td><%= contract.application %></td>
             </tr>
-            <!--
-            <tr class="hidden">
-              <th scope="col">Date</th>
-              <td>Date Here</td>
-            </tr>
-            -->
+            <% if contract.contract_revisions.size > 0 %>
+              <tr class="hidden">
+                <th scope="col">Date</th>
+                <td>
+                  <ul class="contract-revision-list">
+                  <% contract.contract_revisions.each do |revision| %>
+                    <li><a href="http://<%= revision.tos_url %>" target="_blank"><%= revision.contract_date.strftime('%m/%d/%Y') %></a></li>
+                  <% end %>
+                  </ul>
+                </td>
+              </tr>
+              <tr class="hidden">
+                <th scope="col">Total Rating</th>
+                <td>
+                  <ul class="contract-revision-list">
+                  <% contract.contract_revisions.each do |revision| %>
+                    <li><%= link_to "#{revision.total_rating.round(2)}", contract_contract_revision_path(contract,revision) %></li>
+                  <% end %>
+                  </ul>
+                </td>
+              </tr>
+            <% end %>
             <tr class="hidden">
               <th scope="col">Type</th>
               <td><%= contract.contract_type %></td>
