Moved homepage elements; updated team page

--- a/app/views/websites/about.html.erb
+++ b/app/views/websites/about.html.erb
@@ -18,7 +18,7 @@
 
   <h3>Becoming a User</h3>
 
-  <p>You can use the service for free without signing up!  If you do sign up to use TOS Fairness as a user, you will able to rate the agreements and companies yourself, and your score will be averaged into the historical user ratings.</p>
+  <p>You can use the service for free without signing up!  If you do sign up to use TOS Fairness as a user, you will able to rate the agreements and companies yourself, and your score will be averaged into the historical user ratings.  Whether you sign up or not, you can use our service without fear, knowing that we have a very high TOSfairness rating that you can trust.</p>
 
   <p>NOTE: We are not a for-profit project of Break Diving, Inc., a 501(c)(3) tax-exempt corporation.  <a href="http://www.breakdiving.org/contribute">All donations to Break Diving</a>, Inc. will help to further the reach of our website, help to bring on additional coders and attorneys, and ensure that the ideals of transparency espoused on this website and in our bill of rights are spread throughout the world.</p> 
 
