--- a/app/views/websites/team.html.erb
+++ b/app/views/websites/team.html.erb
@@ -4,7 +4,7 @@
 
   <h1>The TOS Fairness Team</h1>
 
-  <p>The Terms of Service Fairness Project is made possible thanks to the incredible donations of time, money, and expertise of many people, including the staff members listed below, as well as many donors from around the world.</p>
+  <p>The Terms of Service Fairness Project is made possible thanks to the incredible donations of time, money, and expertise of many people, including the Break Diving staff members listed below, as well as many donors to Break Diving, Inc. from around the world.</p>
 
   <div class="row">
     <div class="col-xs-12 col-md-6">
@@ -31,8 +31,10 @@
   <div class="col-xs-12">
     <h2>The Reviewers</h2>
     <ul>
-      <li><b>Attorney Monroe Mann</b>, PhD, Esq, MBA, LLM, ME - Practising Attorney in New York</li>
+      <li><b>Attorney Monroe Mann</b>, PhD, Esq, MBA, LLM, ME - Practising Attorney in New York (<a href="http://monroemannlaw.com" target="_blank">Monroe's Law Practice</a>)</li>
       <li>Your name here? If you're an attorney or law student, <a href="volunteer.html">volunteer with us</a>.  We need you.</li>
     </ul>
   </div>
+
+  <p> You can contact anyone above by sending an email to info@breakdiving.org </p>
 </div>
