--- a/app/views/contract_revisions/_contract_revision.html.erb
+++ b/app/views/contract_revisions/_contract_revision.html.erb
@@ -118,6 +118,6 @@
 </div><div class="form-group row">
   <%= f.label :ways_to_improve, :class => "col-2 col-form-label" %>
   <div class="col-7">
-    <%= f.text_area :ways_to_improve, :class => "form-control", :placeholder => "Enter wayts to improve", :row => 3 %>
+    <%= f.text_area :ways_to_improve, :class => "form-control", :placeholder => "Enter ways to improve", :row => 3 %>
   </div>
 </div>
