Centered the website title on homepage

--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -3,8 +3,8 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-5">The Terms of Service Fairness Project</h1>
-        <h6>This Website's TOS Fairness Rating Score: 100 / 100</h6>
+        <h1 class="display-5 text-center">The Terms of Service Fairness Project</h1>
+        <h6 class="text-center">This Website's TOS Fairness Rating Score: 100 / 100</h6>
         <br>
         <div class="row">
           <div class="col-md-10">
