--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -24,7 +24,7 @@
     <div class="row">
       <div class="col-md-7"></div>
       <div class="col-md-5 text-right small align-self-end">
-        © 2018 TOS Fairness. All Rights reserved.
+        © 2018 Break Diving, Inc. All Rights reserved.
       </div>
     </div>
   </div>
