--- a/app/views/websites/about.html.erb
+++ b/app/views/websites/about.html.erb
@@ -18,9 +18,13 @@
 
   <h3>Becoming a User</h3>
 
-  <p>You can use the service for free without signing up!  If you do sign up to use TOS Fairness as a user, you will able to rate the agreements and companies yourself, and your score will be averaged into the historical user ratings.  Whether you sign up or not, you can use our service without fear, knowing that we have a very high TOSfairness rating that you can trust.</p>
+  <p>First, you don't have to sign up.  If you just want to read the ratings, you can use the service for free without signing up!</p>
 
-  <p>NOTE: We are not a for-profit project of Break Diving, Inc., a 501(c)(3) tax-exempt corporation.  <a href="http://www.breakdiving.org/contribute">All donations to Break Diving</a>, Inc. will help to further the reach of our website, help to bring on additional coders and attorneys, and ensure that the ideals of transparency espoused on this website and in our bill of rights are spread throughout the world.</p> 
+  <p>If you do sign up to use TOS Fairness as a user, you will able to rate the agreements and companies yourself, and your score will be averaged into the historical user ratings.  Each rating includes a comment box where you will explain your exerience with that company and its terms of service.  Only your first name is disclosed, though we are working on allowing the user to only have their initials shown.  If you delete your account, all of your ratings and comments will also be deleted.  Simple as that.  For more details, we also suggest you read our simple and fair <a href="terms">terms of service and privacy policy</a>.</p>
+
+  <p>Whether you sign up or not, you can use our service without fear, knowing that we have a very high TOSfairness rating based on our very own <a href="bill_of_rights">bill of rights</a> and <a href="rating_system">tos rating system</a>.  In other words, you can trust us.</p>
+
+  <p>NOTE: We are not a for-profit project of Break Diving, Inc., a 501(c)(3) tax-exempt corporation.  <a href="http://www.breakdiving.org/contribute">All donations to Break Diving</a>, Inc. will help to further the reach of this TOSfairness website, help to bring on additional coders and attorneys, and ensure that the ideals of transparency espoused on this website and in our bill of rights continue to spread throughout the world.</p> 
 
   <h3>Contact</h3>
 
